Auth routes and Auto reload on Docker compose
